Fix styles of the dynamic contents and the homepage overflown buttons

--- a/OwlStock.Web/wwwroot/css/style.css
+++ b/OwlStock.Web/wwwroot/css/style.css
@@ -288,6 +288,7 @@
 }
 
 .project-item .project-title {
+    max-width: 365px;
     position: absolute;
     top: auto;
     right: 1rem;
@@ -295,7 +296,7 @@
     left: 1rem;
     padding: 0.6rem;
     text-align: center;
-    background: rgba(234, 165, 54, 0.9);
+    background: rgba(234, 165, 54);
     color: #FFFFFF;
     transition: .5s;
     border-radius: 10px;
